# tai-robot

./: .gitignore  CLAUDE.md  README.md  _guide_text.txt  build_release.py  dynamic_exit_pullback_strategy_v2.py  futures_list.txt  pyproject.toml  run_backtest.py  runtime_hook_comtypes.py  settings.example.yaml  tai_backtest.spec  test_cli.py  test_connection.py  test_kline.py  test_quick.py  test_stocklist.py  version.py  必看安裝說明.txt
data/: TMF1_15m.csv  TMF1_1D.csv  TMF1_1H.csv  TMF1_H4.csv  TXF1_15m.csv  TXF1_1D.csv  TXF1_1H.csv  TXF1_H4.csv
docs/: mtf-framework-design.md  phase-a-daily-report.md
pinescript/: h4_bollinger_atr_long.pine  h4_midline_touch_long.pine
src/: main.py
src/ai/: prompts.py  (+4 more)
tests/: conftest.py  test_account_monitor.py  test_backtest_engine.py  test_bar_aggregator.py  test_bar_builder.py  test_bar_reuse.py  test_broker_close.py  test_bug_reporter.py  test_chat_client.py  test_code_sandbox.py  test_commission_fix.py  test_connection_monitor.py  test_csv_logger.py  test_daily_report.py  test_data_cache.py  test_data_loader_label.py  test_evolution_fitness.py  test_evolution_paper_trading.py  test_evolution_pool.py  test_execution_engine.py  test_exit_type_tracking.py  test_fill_poller.py  test_h4_bollinger.py  test_indicators.py  test_issue20_session_close.py  test_issue_20_acceptance.py  test_issue_20_fix.py  test_issue_20_tv_discrepancy.py  test_issue_23.py  test_issue_27.py  test_issue_fixes.py  test_kchart_fetcher.py  test_kline_config.py  test_live_runner.py  test_log_redact.py  test_metrics.py  test_mtf_framework.py  test_risk_rules.py  (+16 more)
(+84 files in other folders)
